INTARCH-1489: Fix jump during scrolling on project index page
Former-commit-id: 8a7cccb8bdda53c1ca070b5e0a0d2da86bd3835a

--- a/app/javascript/stylesheets/_structure.scss
+++ b/app/javascript/stylesheets/_structure.scss
@@ -385,6 +385,7 @@ a.search-result-link {
 .wrapper-content.register,
 .wrapper-content.interviews,
 .wrapper-content.home-content,
+.wrapper-content.project-index,
 .wrapper-content.map {
   margin-top: 0px !important;
 }
